exam-CKS/pod-secrets.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-pod
  namespace: test
spec:
  containers:
  - name: dev-container
    image: nginx
    volumeMounts:
    - name: secret-volume
      mountPath: "/etc/secret"
  volumes:
  - name: secret-volume
    secret:
      secretName: db2-test
